# zterm

./: LICENSE  README.md  bun.lockb  index.html  package.json  pyproject.toml  requirements.txt  xterm.html
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: nightly.yml
scripts/: linux.spec  windows.spec
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/assets/: base.css
src/components/: Terminal.vue
zterm/: __init__.py  __main__.py  app.py  main.py
zterm/components/: __init__.py  tab.py  terminal.py  titlebar.py
zterm/pty/: __init__.py  reader.py
zterm/view/: __init__.py  root.py  titlebar.py
zterm/view/widgets/: terminal.py  titlebar.py
zterm/views/: __init__.py  root.py  settings.py
